# opengl-vcpkg-cmake-template

./: .gitignore  CMakeLists.txt  readme.md
src/: test.cpp
